Fix dropdown clipping: modal-body overflow visible

--- a/src/components/TaskDetailModal.css
+++ b/src/components/TaskDetailModal.css
@@ -81,7 +81,8 @@
 .modal-body {
   display: flex;
   flex-grow: 1;
-  overflow: hidden;
+  overflow: visible;
+  min-height: 0;
 }
 
 .modal-main {
